tests/baselines/reference/interfaceImplementation5.errors.txt
tests/cases/compiler/interfaceImplementation5.ts(5,7): error TS2420: Class 'C1' incorrectly implements interface 'I1'.
  Property 'getset1' is read-only in type 'C1' but writable in type 'I1'.
tests/cases/compiler/interfaceImplementation5.ts(6,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/interfaceImplementation5.ts(10,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/interfaceImplementation5.ts(14,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/interfaceImplementation5.ts(15,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/interfaceImplementation5.ts(18,7): error TS2420: Class 'C4' incorrectly implements interface 'I1'.
  Property 'getset1' is read-only in type 'C4' but writable in type 'I1'.
tests/cases/compiler/interfaceImplementation5.ts(19,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/interfaceImplementation5.ts(23,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/interfaceImplementation5.ts(27,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/interfaceImplementation5.ts(28,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/interfaceImplementation5.ts (10 errors) ====
    interface I1 {
        getset1:number;
    }
    
    class C1 implements I1 {
          ~~
!!! error TS2420: Class 'C1' incorrectly implements interface 'I1'.
!!! error TS2420:   Property 'getset1' is read-only in type 'C1' but writable in type 'I1'.
        public get getset1(){return 1;}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    class C2 implements I1 {
        public set getset1(baz:number){}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    class C3 implements I1 {
        public get getset1(){return 1;}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public set getset1(baz:number){}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    class C4 implements I1 {
          ~~
!!! error TS2420: Class 'C4' incorrectly implements interface 'I1'.
!!! error TS2420:   Property 'getset1' is read-only in type 'C4' but writable in type 'I1'.
        public get getset1(){var x:any; return x;}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    class C5 implements I1 {
        public set getset1(baz:any){}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    class C6 implements I1 {
        public set getset1(baz:any){}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        public get getset1(){var x:any; return x;}
                   ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    